--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 h1 { color: white;
-
+text-align: center;
 margin:0;
 background-color: #4aaaa5;
 width: 200px;
@@ -20,11 +20,12 @@ font-size: 20px;
  }
  .Container
  {
- 	background-color: #dddddd;
+ 	border: 1px solid #4aaaa5;
  	width: 960px ;
  	height: 480px ;
- 	border: 1px solid #dddddd;
-  
+ 	
+  background-image: url("http://il9.picdn.net/shutterstock/videos/9352997/thumb/1.jpg");
+  background-size: cover;
  }
 
  .header2
@@ -41,7 +42,7 @@ font-size: 20px;
  	background-color: white;
  	margin: 50px;
  	float: left ;
- 	border: 1px solid #dddddd;
+ 	border: 1px solid #4aaaa5;
 
 
 
@@ -53,7 +54,7 @@ font-size: 20px;
  	background-color: white;
  	float: right;
  	margin: 50px;
- 	border: 1px solid #dddddd;
+ 	border: 1px solid #4aaaa5;
 
 
  
@@ -64,7 +65,7 @@ font-size: 20px;
    background-color: grey;
    width: 962px;
    color: white;
-   font-size: 10px;
+   font-size: 12px;
    padding: 25px 0px 25px 0px ;
    border-top: 5px solid #4aaaa5;
 
@@ -80,6 +81,7 @@ font-size: 20px;
   	list-style: none;
   	border-right: 1px solid lightgrey;
   	padding-left: 20px;
+    color: grey;
   }
 
 
@@ -99,13 +101,17 @@ font-size: 20px;
 .About p {
   float:middle;
   text-align: left;
-  padding: 15px;
-  margin: 15px;
+  padding-right: 15px;
+  margin: 0px;
+  font-size: 16px; ;
+  font-family: Arial;
+  font-style: italic;
+  color: grey;
 }
 .icons li {
   list-style: none;
   float: left;
   display: inline;
-  padding: 5px;
+  padding: 4px;
 }
 
