--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ font-size: 20px;
   	float: right;
   	width: 80px;
   	list-style: none;
-  	border-right: 1px solid lightgrey;
+  	border-right: 2px solid lightgrey;
   	color: grey;
     text-align: center;
     padding: 10px;
@@ -197,5 +197,103 @@ border-radius: 10px;
 textarea {
   border-color: lightgrey;
 }
+ 
+@media screen and (max-width: 640px){
+ 
+  .About{
+    width: 95%;
+    height: 100%;
+    background-image: none;
+    padding: 0px;
+    margin: 2%; 
 
+
+    
+    
+
+
+
+ }
+ #Nav li {
+display:block ;
+width: 100%;
+text-align: center;
+border: 1px solid #4aaaa5;
+margin-bottom: 2px;
+background-color: #4aaaa5;
+color: white;
+
+
+
+
+
+
+ }
+ #Nav li:hover { 
+background: white;
+color: #4aaaa5 ;
+  }
+
+#Nav ul {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 0px;
+  margin-left: 6%; 
+
+}
+
+.Container { 
+  width: 95%;
+ margin-left: 3%;
+
+ }
+
+ footer{ 
+   margin-top: 0px;
+  width: 95%;
+   margin-left: 3%;
+  border-right: 2px solid grey;
+ }
+
+   
+.Links { 
+
+  
+  width: 80%;
+
+
+ }
+
+#portfolioTable img
+{
+   
+   width: 100%;
+   margin:1%;
+
+   
+
+
+}
+h1 {background-color: white;
+    color: #4aaaa5 ;
+    border: 1px solid #4aaaa5;
+    width:100%;
+    margin: 0px;
+    
+    
+         }
+.Header1{
+  width:90%;
+
+}
+textarea{
+width: 90%;}
+
+#Nav 
+{
+  width: 95%;
+ 
+
+}
  
