--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ textarea {
   .About{
     width: 95%;
     height: 100%;
-    background-image: none;
+    
     padding: 0px;
     margin: 2%; 
 
@@ -268,10 +268,13 @@ color: #4aaaa5 ;
 #portfolioTable img
 {
    
-   width: 100%;
-   margin:1%;
+      margin:0% 1% 0% 1%;
+   width: 90%;   
 
    
+
+
+}
 
 
 }
