--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ color: #4aaaa5 ;
 .Container { 
   width: 95%;
  margin-left: 3%;
- 
+
 
  }
 
@@ -261,9 +261,12 @@ color: #4aaaa5 ;
 .Links { 
 
   
-  width: 80%;
+  width: 70%;
 
 
+ }
+ #Links li {
+  float: center;
  }
 
 #portfolioTable img
