--- a/style.css
+++ b/style.css
@@ -9,14 +9,10 @@ margin-left: 80px;
 padding-top: 15px;
 font-size: 20px;
 
-
-
-
  }
 
  .Header1 {
- 	display: inline-block;
- 	
+ 	display: inline-block;	
 
  }
  .Container
@@ -24,7 +20,6 @@ font-size: 20px;
  	border: 1px solid #4aaaa5;
  	width: 960px ;
  	height: 600px ;
- 	
   background-image: url("http://il9.picdn.net/shutterstock/videos/9352997/thumb/1.jpg");
   background-size: cover;
  }
@@ -44,10 +39,8 @@ font-size: 20px;
  	margin: 50px;
  	float: left ;
  	border: 1px solid #4aaaa5;
-
-
-
  }
+
  .Links
  {
  	height: 200px;
@@ -56,9 +49,6 @@ font-size: 20px;
  	float: right;
  	margin: 50px;
  	border: 1px solid #4aaaa5;
-
-
- 
  }
 
  footer{
@@ -69,8 +59,8 @@ font-size: 20px;
    font-size: 12px;
    padding: 25px 0px 25px 0px ;
    border-top: 5px solid #4aaaa5;
-
  }
+
  .About img
  { 
  	margin: 15px 0px 0px 25px;
@@ -90,10 +80,7 @@ font-size: 20px;
 
 
 #Nav { 
-	display: inline-block;
-	
-	
-		
+	display: inline-block;	
  }
 
   #mainpic 
@@ -197,45 +184,92 @@ border-radius: 10px;
 textarea {
   border-color: lightgrey;
 }
+
+/* Media Querey 980px */
  
-@media screen and (max-width: 960px){
+@media screen and (max-width: 980px){
  
-  .About{
+ footer{ 
+  margin-top: 0px;
+  width: 95%;
+  margin-left: 3%;
+  border-right: 2px solid grey;
+   }
+
+   
+.Links .Links li{ 
+  width: 70%;
+}
+
+#portfolioTable img {  
+  margin:0% 1% 0% 1%;
+  width: 90%;   
+}
+.Container{
+  width: 95%;
+  margin-left: 3%;
+}
+
+
+textarea{
+  width: 90%;
+}
+
+/* Media Querey 768px */
+ 
+@media screen and (max-width: 768px){
+ 
+
+
+.Container { 
+  width: 95%;
+  margin-left: 3%;
+}
+
+ footer{ 
+  margin-top: 0px;
+  width: 95%;
+  margin-left: 3%;
+  border-right: 2px solid grey;
+   }
+
+#portfolioTable img {  
+  margin:0% 1% 0% 1%;
+  width: 90%;   
+}
+
+textarea{
+  width: 90%;
+}
+
+/* Media Querey 640px */
+
+@media screen and (max-width: 640px){
+ 
+.About{
     width: 95%;
     height: 100%;
-    
     padding: 0px;
     margin: 2%; 
-
-
-    
-    
-
-
-
  }
- #Nav li {
-display:block ;
-width: 100%;
-text-align: center;
-border: 1px solid #4aaaa5;
-margin-bottom: 2px;
-background-color: #4aaaa5;
-color: white;
 
 
+#Nav li {
+  display:block ;
+  width: 100%;
+  border: 1px solid #4aaaa5;
+  margin-bottom: 2px;
+  background-color: #4aaaa5;
+  color: white;
+}
 
-
-
-
- }
- #Nav li:hover { 
-background: white;
-color: #4aaaa5 ;
+#Nav li:hover { 
+  background: white;
+  color: #4aaaa5 ;
   }
 
 #Nav ul {
-  display: block;
+  display: inline;
   width: 100%;
   text-align: center;
   padding: 0px;
@@ -245,62 +279,48 @@ color: #4aaaa5 ;
 
 .Container { 
   width: 95%;
- margin-left: 3%;
+  margin-left: 3%;
+}
 
-
- }
-
- footer{ 
-   margin-top: 0px;
+ footer { 
+  margin-top: 0px;
   width: 95%;
-   margin-left: 3%;
+  margin-left: 3%;
   border-right: 2px solid grey;
    }
 
    
-.Links { 
-
-  
+.Links .Links li { 
   width: 70%;
-
-
- }
- #Links li {
-  float: center;
- }
-
-#portfolioTable img
-{
-   
-      margin:0% 1% 0% 1%;
-   width: 90%;   
-
-   
-
-
 }
 
 
+#portfolioTable img {  
+  margin:0% 1% 0% 1%;
+  width: 90%;   
 }
-h1 {background-color: white;
-    color: #4aaaa5 ;
-    border: 1px solid #4aaaa5;
-    width:100%;
-    margin: 0px;
+
+h1 {
+  background-color: white;
+  color: #4aaaa5 ;
+  border: 1px solid #4aaaa5;
+  width: 100%;
+  margin-left:0px;
+  }
     
-    
-         }
-.Header1{
+.Header1 {
   width:90%;
+}
+
+textarea {
+  width: 90%;
+}
+
+#Nav { 
+  width: 95%;
+  margin-left: 20px;
 
 }
-textarea{
-width: 90%;}
-
-#Nav 
-{
-  width: 95%;
  
 
-}
  
